# suit-generator

./: .gitignore  CODEOWNERS  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: test-spec.yml
.github/workflows/: contribs.yml  static_analysis.yml
build_configuration/: configuration.py
doc/: build_doc.sh  requirements-doc.txt
doc/source/: conf.py  index.rst  suit_generator.advanced.rst  suit_generator.basic.rst
examples/input_files/: create_envelopes.sh  envelope_1.json  envelope_1.yaml  envelope_2_hierarchical.yaml
ncs/: 802154_rad_envelope.yaml.jinja2  Kconfig  app_envelope.yaml.jinja2  app_envelope_encrypted.yaml.jinja2  artifacts_guard.py  basic_kms.py  build.py  default_app_rad_cores_envelope.yaml.jinja2  default_appcore_envelope.yaml.jinja2  encrypt_script.py  image_input_args.jinja2  key_public.pem  multiprotocol_rad_envelope.yaml.jinja2  nordic_top_envelope.yaml.jinja2  nordic_top_with_secdom_hierarchical_envelope.yaml.jinja2  rad_envelope.yaml.jinja2  root_hierarchical_envelope.yaml.jinja2  root_wip_envelope.yaml.jinja2  root_with_binary_nordic_top.yaml.jinja2  root_with_nordic_top_envelope.yaml.jinja2  root_with_nordic_top_hierarchical_envelope.yaml.jinja2  root_with_nordic_top_sysctrl_secdom_hierarchical_envelope.yaml.jinja2  root_with_secdom_hierarchical_envelope.yaml.jinja2  sample_recursive_sign_config.json  sec_envelope.yaml.jinja2  secdom_update_envelope.yaml.jinja2  sign_script.py  sysctrl_envelope.yaml.jinja2
suit_generator/: __init__.py  args.py  cli.py  cmd_cache_create.py  cmd_convert.py  cmd_create.py  cmd_encrypt.py  cmd_image.py  cmd_keys.py  cmd_mpi.py  cmd_parse.py  cmd_payload_extract.py  cmd_sign.py  envelope.py  envelope_api.py  exceptions.py  inputOutput.py  input_output.py  logger.py  logging.yaml  suit_encrypt_script_base.py  suit_kms_base.py  suit_sign_script_base.py  test_envelope.json  test_envelope_2.json
suit_generator/suit/: authentication.py  envelope.py  manifest.py  payloads.py  security.py  severable.py  text.py
tests/: encrypt_script_mock.py  key_private.pem  kms_script_mock.py  requirements-test.txt  sign_script_mock.py  test_args.py  test_cbor_out_of_spec.py  test_cli.py  test_cmd_cache_create.py  test_cmd_convert.py  test_cmd_create.py  test_cmd_encrypt.py  test_cmd_image.py  test_cmd_keys.py  test_cmd_parse.py  test_cmd_sign.py  test_common_types.py  test_envelope.py  test_envelope_api.py  test_hierarchical_manifest.py  test_manifest.py  test_ncs_encrypt_script.py  test_ncs_sign_script.py  test_suit_authentication.py  test_suit_encryption.py  test_suit_envelope.py  test_suit_envelope_severable.py  test_suit_manifest.py  test_suit_manifest_with_class.py
tests/fuzz/: README.md  fuzz_suit_obj.py  fuzz_suit_tstr.py  fuzz_suit_yaml.py  (+1 more)
zephyr/: module.yml
(+2 files in other folders)
