[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "suit-generator"
authors = [
    {name = "Robert Stypa", email = "robert.stypa@nordicsemi.no"},
]
description = "SUIT envelope generator and parser"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["suit", "envelope", "cbor"]
license = {text = "LicenseRef-Nordic-5-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version","dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages=["suit_generator","build_configuration"]

[project.scripts]
suit-generator = "suit_generator.cli:main"

[tool.setuptools_scm]
write_to="suit_generator/_version.py"

[tool.black]
line-length = 120

[tool.pydocstyle]
inherit = false
# Ignored rules:
# D208: Docstring is over-indented
# D203: 1 blank line required before class docstring
# D212: Multi-line docstring summary should start at the first line
# D213: Multi-line docstring summary should start at the second line
# D105: Missing docstring in magic method
# D104: Missing docstring in public package
ignore = ["D208","D203","D212","D213","D105","D104"]
match = "^(?!test).*py"

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s:%(levelname)s:%(message)s"
