[metadata]
name = suit-generator
description = SUIT envelope generator and parser
long_description = file: README.md
author = Robert Stypa
author_email = robert.stypa@nordicsemi.no
url = https://github.com/NordicSemiconductor/suit-generator
license = LicenseRef-Nordic-5-Clause

[flake8]
max-line-length = 120
ignore =
    # line break before binary operator
    W503,
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203, D203

per-file-ignores =
    # imported but unused
    __init__.py: F401

exclude =
    .git,
    __pycache__,
    .venv,
    .eggs

[pycodestyle]
max-line-length = 120
